[backend] Fix latency scenarioId (#1582)
Co-authored-by: Johanah LEKEU <johanah.lekeu@filigran.io>