@@ -1,62 +1,152 @@
 package io.openbas.utils;
 
+import io.openbas.asset.AssetGroupService;
 import io.openbas.database.model.AttackPattern;
+import io.openbas.database.model.Endpoint;
 import io.openbas.database.model.Inject;
-import io.openbas.database.model.InjectExpectation;
+import io.openbas.database.raw.*;
+import io.openbas.database.repository.*;
 import io.openbas.rest.atomic_testing.form.InjectTargetWithResult;
 import io.openbas.rest.inject.form.InjectExpectationResultsByAttackPattern;
 import io.openbas.utils.AtomicTestingMapper.ExpectationResultsByType;
 import jakarta.validation.constraints.NotNull;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Component;
 
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static io.openbas.utils.AtomicTestingUtils.getTargetsWithResults;
+import static java.util.Collections.emptyList;
 
+@RequiredArgsConstructor
+@Component
 public class ResultUtils {
 
-    private ResultUtils() {
+  private final InjectExpectationRepository injectExpectationRepository;
+  private final TeamRepository teamRepository;
+  private final UserRepository userRepository;
+  private final AssetRepository assetRepository;
+  private final AssetGroupRepository assetGroupRepository;
+  private final AssetGroupService assetGroupService;
+
+  // -- UTILS --
+  public List<AtomicTestingMapper.ExpectationResultsByType> getResultsByTypes(List<String> injectIds) {
+    return computeGlobalExpectationResults(injectIds);
+  }
+
+  public List<InjectTargetWithResult> getInjectTargetWithResults(List<String> injectIds) {
+    if (injectIds != null) {
+      return computeTargetResults(injectIds);
+    } else {
+      return emptyList();
     }
+  }
 
-    // -- GLOBAL SCORE --
+  public static List<InjectExpectationResultsByAttackPattern> computeInjectExpectationResults(
+      @NotNull final List<Inject> injects) {
 
-    public static List<ExpectationResultsByType> computeGlobalExpectationResults(@NotNull final List<Inject> injects) {
-        List<InjectExpectation> expectations = injects
-                .stream()
-                .flatMap(inject -> inject.getExpectations().stream())
-                .filter(expectation -> expectation.getUser() == null) // Filter expectations linked to players
-                .toList();
-        return AtomicTestingUtils.getExpectationResultByTypes(expectations);
-    }
+    Map<AttackPattern, List<Inject>> groupedByAttackPattern = injects.stream()
+        .flatMap(inject -> inject.getInjectorContract()
+            .map(contract -> contract.getAttackPatterns().stream()
+                .map(attackPattern -> Map.entry(attackPattern, inject)))
+            .orElseGet(Stream::empty))
+        .collect(Collectors.groupingBy(
+            Map.Entry::getKey,
+            Collectors.mapping(Map.Entry::getValue, Collectors.toList())
+        ));
 
-    public static List<InjectExpectationResultsByAttackPattern> computeInjectExpectationResults(
-            @NotNull final List<Inject> injects) {
+    return groupedByAttackPattern.entrySet()
+        .stream()
+        .map(entry -> new InjectExpectationResultsByAttackPattern(entry.getKey(), entry.getValue()))
+        .toList();
+  }
 
-        Map<AttackPattern, List<Inject>> groupedByAttackPattern = injects.stream()
-                .flatMap(inject -> inject.getInjectorContract()
-                        .map(contract -> contract.getAttackPatterns().stream()
-                                .map(attackPattern -> Map.entry(attackPattern, inject)))
-                        .orElseGet(Stream::empty))
-                .collect(Collectors.groupingBy(
-                        Map.Entry::getKey,
-                        Collectors.mapping(Map.Entry::getValue, Collectors.toList())
-                ));
 
-        return groupedByAttackPattern.entrySet()
-                .stream()
-                .map(entry -> new InjectExpectationResultsByAttackPattern(entry.getKey(), entry.getValue()))
-                .toList();
-    }
+  // -- GLOBAL SCORE --
+  public List<ExpectationResultsByType> computeGlobalExpectationResults(
+      @NotNull List<String> injectIds) {
+    return AtomicTestingUtils.getExpectationResultByTypesFromRaw(
+        injectExpectationRepository.rawForComputeGlobalByIds(injectIds));
+  }
 
-    // -- TARGET --
+  // -- TARGETS WITH RESULTS --
+  public List<InjectTargetWithResult> computeTargetResults(
+      @NotNull List<String> injectIds) {
 
-    public static List<InjectTargetWithResult> computeTargetResults(@NotNull final List<Inject> injects) {
-        return injects.stream()
-                .flatMap(inject -> getTargetsWithResults(inject).stream())
-                .distinct()
-                .toList();
-    }
+    // -- EXPECTATIONS --
+    List<RawInjectExpectation> rawInjectExpectations = injectExpectationRepository.rawByInjectId(injectIds);
+    Map<String, List<RawInjectExpectation>> expectationMap = rawInjectExpectations
+        .stream().collect(Collectors.groupingBy(RawInjectExpectation::getInject_id));
+
+    // -- TEAMS INJECT --
+
+    List<String> teamIds = rawInjectExpectations
+        .stream()
+        .map(RawInjectExpectation::getTeam_id)
+        .filter(Objects::nonNull)
+        .distinct()
+        .toList();
+
+    List<RawTeam> rawTeams = teamRepository.rawByIdsOrInjectIds(teamIds, injectIds);
+    Map<String, RawTeam> teamMap = rawTeams.stream().collect(Collectors.toMap(RawTeam::getTeam_id, rawTeam ->rawTeam));
+
+    // -- USER MAP FROM TEAMS --
+
+    List<String> userIds = rawInjectExpectations
+        .stream()
+        .map(RawInjectExpectation::getUser_id)
+        .filter(Objects::nonNull)
+        .distinct()
+        .toList();
+
+    List<RawUser> rawUsers = userRepository.rawUserByIds(userIds);
+    Map<String, RawUser> userMap = rawUsers.stream().collect(Collectors.toMap(RawUser::getUser_id, rawUser ->rawUser));
+
+    // -- ASSETS GROUPS INJECT --
+    List<String> assetGroupIds = rawInjectExpectations
+        .stream()
+        .map(RawInjectExpectation::getAsset_group_id)
+        .filter(Objects::nonNull)
+        .distinct()
+        .toList();
+
+    List<RawAssetGroup> rawAssetGroups = assetGroupRepository.rawByIdsOrInjectIds(assetGroupIds, injectIds);
+    Map<String, RawAssetGroup> assetGroupMap = rawAssetGroups.stream().collect(Collectors.toMap(RawAssetGroup::getAsset_group_id, rawAssetGroup ->rawAssetGroup));
+
+    // -- ASSETS INJECT --
+    List<String> assetIds = rawInjectExpectations
+        .stream()
+        .map(RawInjectExpectation::getAsset_id)
+        .filter(Objects::nonNull)
+        .distinct()
+        .collect(Collectors.toList());
+
+    assetIds.addAll(rawAssetGroups
+        .stream()
+        .flatMap(rawAssetGroup -> rawAssetGroup.getAsset_ids().stream())
+        .distinct().toList());
+
+    List<RawAsset> rawAssets = assetRepository.rawByIdsOrInjectIds(assetIds, injectIds);
+    Map<String, RawAsset> assetMap = rawAssets.stream().collect(Collectors.toMap(RawAsset::getAsset_id, rawAsset ->rawAsset));
+
+    Map<String, List<Endpoint>> dynamicForAssetGroupMap = assetGroupService.computeDynamicAssetFromRaw(
+        rawAssetGroups);
+
+    return injectIds.stream()
+        .flatMap(
+            injectId -> {
+              return AtomicTestingUtils.getTargetsWithResultsFromRaw(
+                  expectationMap.getOrDefault(injectId, emptyList()),
+                  teamMap,
+                  userMap,
+                  assetMap,
+                  assetGroupMap,
+                  dynamicForAssetGroupMap
+              ).stream();
+            })
+        .distinct()
+        .toList();
+  }
 
 }
